--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   sqflite: ^2.2.4+1
   path: ^1.8.3
   fl_chart: ^0.66.0
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
