--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   path: ^1.8.3
   fl_chart: ^0.66.0
   permission_handler: ^11.3.0
-  path_provider: ^2.1.2
+  #path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
