--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,14 +1,7 @@
-name: 'Flutter CI'
+name: Android
 on:
   workflow_dispatch:
-# This workflow is triggered on pushes to the repository.
-
-# on:
-#   push:
-#     branches:
-#     - main    
-# on: push    # Default will running for every branch.
-    
+     
 jobs:
   build:
     # This job will run on ubuntu virtual machine
