--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,7 +1,7 @@
 name: Android
 on:
   workflow_dispatch:
-     
+
 jobs:
   build:
     # This job will run on ubuntu virtual machine
@@ -9,40 +9,42 @@ jobs:
     steps:
     
     # Setup Java environment in order to build the Android app.
-    - uses: actions/checkout@v4
+    - name: 'Clone Repo'
+      uses: actions/checkout@v4
     - name: 'Set up JDK 12'
-    - uses: actions/setup-java@v1
+      uses: actions/setup-java@v1
       with:
         java-version: '12.x'
         distribution: 'temurin'
     
     # Setup the flutter environment.
-    - uses: subosito/flutter-action@v2
+    - name: 'Set up Flutter environment'
+      uses: subosito/flutter-action@v2
       with:
         channel: 'stable' # 'dev', 'alpha', default to: 'stable'
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
     
     # Get flutter dependencies.
     - name: 'Get packages'
-    - run: flutter pub get
+      run: flutter pub get
     
     - name: 'Run Tests'
     # Check for any formatting issues in the code.
-    - run: flutter format --set-exit-if-changed .
+      run: flutter format --set-exit-if-changed .
     
     # Statically analyze the Dart code for any errors.
-    - run: flutter analyze .
+      run: flutter analyze .
     
     # Run widget tests for our flutter project.
-    - run: flutter test
+      run: flutter test
     
     # Build apk.
     - name: 'Build APK'
-    - run: flutter build apk
+      run: flutter build apk
     
     # Upload generated apk to the artifacts.
     - name: 'Upload APK'
-    - uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v2
       with:
         name: release-apk
         path: build/app/outputs/apk/release/app-release.apk
