--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   path: ^1.9.0
   fl_chart: ^0.68.0
   permission_handler: ^11.3.1
+  shared_preferences: ^2.2.3
   #path_provider: ^2.1.2
 
 dev_dependencies:
