--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   fl_chart: ^0.68.0
   permission_handler: ^11.3.1
   shared_preferences: ^2.2.3
+  url_launcher: ^6.3.0
   #path_provider: ^2.1.2
 
 dev_dependencies:
