--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -11,10 +11,10 @@ jobs:
     # Setup Java environment in order to build the Android app.
     - name: 'Clone Repo'
       uses: actions/checkout@v4
-    - name: 'Set up JDK 12'
+    - name: 'Set up JDK 17'
       uses: actions/setup-java@v2
       with:
-        java-version: '12.x'
+        java-version: '17.0.2+8'
         distribution: 'temurin'
     
     # Setup the flutter environment.
