--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.3.3+1
+  sqflite: ^2.4.1
   path: ^1.9.0
   fl_chart: ^0.69.0
   permission_handler: ^11.3.1
-  shared_preferences: ^2.2.3
+  shared_preferences: ^2.3.3
   url_launcher: ^6.3.0
   #path_provider: ^2.1.2
 
