--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -49,19 +49,19 @@ jobs:
     # Build apk.
     - name: 'Build Universal APK'
       run: |
-        flutter build apk
+        flutter build apk --release
         cd build/app/outputs/flutter-apk/
         mv app-release.apk Healthlog-universal.apk
 
     - name: 'Build 64bit APK'
       run: |
-        flutter build apk --target-platform android-arm64
+        flutter build apk --release --target-platform android-arm64
         cd build/app/outputs/flutter-apk/
         mv app-release.apk Healthlog-arm64.apk
 
     - name: 'Build 32bit APK'
       run: |
-        flutter build apk --target-platform android-arm
+        flutter build apk --release --target-platform android-arm
         cd build/app/outputs/flutter-apk/
         mv app-release.apk Healthlog-arm.apk
 
