--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -25,14 +25,10 @@ jobs:
         # flutter-version: '1.12.x' # you can also specify exact version of flutter
 
     - name: Decode and create keystore
-      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
+      run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks  
 
     - name: Create key.properties
-      run: |
-        echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" > android/key.properties
-        echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
-        echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-        echo "storeFile=keystore.jks" >> android/key.properties
+      run: echo "${{ secrets.KEY_PROPS }}" | base64 --decode > android/key.properties
     
     # Get flutter dependencies.
     - name: 'Get packages'
